# vnwealth-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: crypto.rs  defaults.rs  gold.rs  main.rs  mutual_funds.rs  portfolio.rs  price_services.rs  support.rs  vn_stock.rs
src/cash_flow/: account.rs  transaction.rs
src/errors/: asset.rs
src/market/: crypto.rs
src/pallets/: mod.rs  system.rs
src/pallets/assets/: _fungible.rs  mod.rs
src/portfolio/: asset.rs  cash.rs  crypto.rs  gold.rs  mod.rs  stock.rs  types.rs
src/price_services/: crypto.rs  mutual_funds.rs  nft.rs  vn_stock.rs
src/provider/: alchemy.rs  binance.rs  dragon_capital.rs  mod.rs  sjc.rs  tcbs.rs  types.rs  vina_capital.rs  vndirect.rs
