[package]
name = "wealth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.18.1"
serde = {version = "1.0.197", features = ["derive"]}
quick-xml = {version = "0.31.0", features = ["serialize"]}
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.34"
